tests/snapshots/render/iterm2@commonmark-spec-309-lists.snap
---
source: tests/render.rs
assertion_line: 116
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: tests/markdown/commonmark-spec/309-lists.md
---
• foo

  notcode

• foo

[32m<!-- -->
[0m
[32m╭──────────────────────────────────────────────────────────────────────────────╮[0m
[32m│ [0mcode                                                                        [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m
