tests/snapshots/render/iterm2@commonmark-spec-313-lists.snap
---
source: tests/render.rs
assertion_line: 116
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: tests/markdown/commonmark-spec/313-lists.md
---
 1. a

 2. b

[32m╭──────────────────────────────────────────────────────────────────────────────╮[0m
[32m│ [0m3. c                                                                        [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m
