tests/snapshots/render/iterm2@commonmark-spec-320-lists.snap
---
source: tests/render.rs
assertion_line: 113
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: tests/markdown/commonmark-spec/320-lists.md
snapshot_kind: text
---
• a
  [90m▌ [0m[3mb[0m

• c
