tests/snapshots/render/iterm2@commonmark-spec-321-lists.snap
---
source: tests/render.rs
assertion_line: 113
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: tests/markdown/commonmark-spec/321-lists.md
snapshot_kind: text
---
• a
  [90m▌ [0m[3mb[0m

  [32m╭────────────────────────────────────────────────────────────────────────────╮[0m
  [32m│ [0m[33mc[0m                                                                         [32m │[0m
  [32m╰────────────────────────────────────────────────────────────────────────────╯[0m

• d
