tests/snapshots/render/iterm2@samples-block_quote_and_ruler.snap
---
source: tests/render.rs
assertion_line: 113
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: tests/markdown/samples/block_quote_and_ruler.md
snapshot_kind: text
---
Block quote without paragraphs:

[90m▌ [0m[3mLorem ipsum dolor sit amet.[0m

Block quotes with paragraphs

[90m▌ [0m[3mLorem ipsum dolor sit amet,[0m consetetur sadipscing elitr[3m, sed diam nonumy[0m
[90m▌ [0m[3meirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam[0m
[90m▌ [0m[3mvoluptua.[0m

[90m▌ [0m[3mLorem ipsum dolor sit amet,[0m[1m[3m consetetur sadipscing elitr[0m[3m, sed diam nonumy[0m
[90m▌ [0m[3meirmod tempor invidunt ut[0m[3m[33m labore et dolore magna[0m[3m aliquyam erat, sed diam[0m
[90m▌ [0m[3mvoluptua.[0m

Before we continue, have a ruler:

[32m════════════════════════════════════════════════════════════════════════════════[0m

Bye bye
