tests/snapshots/render/iterm2@samples-code_blocks.snap
---
source: tests/render.rs
assertion_line: 116
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: tests/markdown/samples/code_blocks.md
---
Code blocks without syntax highlighting:

[32m╭──────────────────────────────────────────────────────────────────────────────╮[0m
[32m│ [0mSome plain                                                                  [32m │[0m
[32m│ [0mcode block                                                                  [32m │[0m
[32m│ [0m   fooo                                                                     [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m

Or with syntax highlighting, eg, Rust:

[32m╭── rust ──────────────────────────────────────────────────────────────────────╮[0m
[32m│ [0m[34mfn[0m [33mmain[0m() {                                                                 [32m │[0m
[32m│ [0m    [32mprintln![0m("[36mHello world[0m")                                                 [32m │[0m
[32m│ [0m}                                                                           [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m

Or Scala:

[32m╭── scala ─────────────────────────────────────────────────────────────────────╮[0m
[32m│ [0m[34mobject[0m [33mHelloWorld[0m {                                                         [32m │[0m
[32m│ [0m  [34mdef[0m [33mmain[0m([34margs[0m: [32mArray[0m[[32mString[0m]): [34mUnit[0m = {                                   [32m │[0m
[32m│ [0m    println("[36mHello, world![0m")                                                [32m │[0m
[32m│ [0m  }                                                                         [32m │[0m
[32m│ [0m}                                                                           [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m
