tests/snapshots/render/iterm2@samples-headers_and_paragraphs.snap
---
source: tests/render.rs
assertion_line: 113
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: tests/markdown/samples/headers_and_paragraphs.md
snapshot_kind: text
---
]1337;SetMark\[1m[34mThe heading[0m
[1m[34m════════════════════════════════════════════════════════════════════════════════[0m

Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.

]1337;SetMark\[1m[34mA sub-heading[0m
[1m[34m────────────────────────────────────────────────────────────────────────────────[0m

Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.

]1337;SetMark\[1m[34mAnother heading with [0m[1m[33minline formatting[0m
[1m[34m────────────────────────────────────────────────────────────────────────────────[0m

Bye Bye
